--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
   <body>
     <div class="main">
       <div class="card-deck"></div>
+      <div class="cards-left"></div>
       <div class="board-desk">
-        <!-- <div class="board-space">
+        <div class="board-space with-img">
           <img class="card-img" src="./images/corner.png">
-        </div> -->  
+        </div>
       </div>
     </div>
     <script type="text/javascript" src="./js/main.js"></script>
